[gd_scene load_steps=4 format=3 uid="uid://d3uvfbythuk71"]

[ext_resource type="Script" path="res://scenes/components/crafting/crafting_component.gd" id="1_iivko"]
[ext_resource type="PackedScene" uid="uid://drjqhxqq8lak5" path="res://scenes/ui/menus/crafting_menus/crafting_progress_bar/crafting_progress_bar.tscn" id="2_jivyx"]
[ext_resource type="PackedScene" uid="uid://vx7l7yoxtgjd" path="res://systems/audio_system/scenes/one_shot_sound_component/one_shot_sound_component.tscn" id="3_s8ory"]

[node name="CraftingComponent" type="Node2D"]
script = ExtResource("1_iivko")

[node name="CraftingProgressBar" parent="." instance=ExtResource("2_jivyx")]
visible = false
offset_left = -11.0
offset_top = -18.0
offset_right = 18.0
offset_bottom = -6.0

[node name="CraftStartSound" parent="." instance=ExtResource("3_s8ory")]

[node name="CraftFinishSound" parent="." instance=ExtResource("3_s8ory")]

[connection signal="finished" from="CraftingProgressBar" to="." method="_on_crafting_progress_bar_finished"]
